objects/Jiffle_Agenda_Item__c.object
<CustomObject>
    <fields>
        <fullName>Jiffle_Event__c</fullName>
        <label>Jiffle Event</label>
        <referenceTo>Jiffle_Event__c</referenceTo>
        <relationshipLabel>JiffleNow Agenda Items</relationshipLabel>
        <relationshipName>Jiffle_Agenda_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_Attendees__c</fullName>
        <label>Number Attendees</label>
        <summarizedField>Jiffle_Meeting_Session__c.Total_Number_Attendees__c</summarizedField>
        <summaryForeignKey>Jiffle_Meeting_Session__c.Jiffle_Agenda_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Meetings_Sessions__c</fullName>
        <label>Number Meetings</label>
        <summaryFilterItems>
            <field>Jiffle_Meeting_Session__c.Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Jiffle_Meeting_Session__c.Jiffle_Agenda_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Single_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Name__c</fullName>
        <label>Track Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JiffleNow Agenda Item</label>
    <nameField>
        <label>Jiffle Agenda Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JiffleNow Agenda Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Jiffle_Event__c</columns>
        <columns>Topic__c</columns>
        <columns>Track_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>